--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chatgpt-web-midjourney-proxy",
-  "version": "2.15.7",
+  "version": "2.16.2",
   "private": false,
   "description": "ChatGPT Web Midjourney Proxy",
   "author": "Dooy <ydlhero@gmail.com>",
@@ -31,6 +31,7 @@
   "dependencies": {
     "@traptitech/markdown-it-katex": "^3.6.0",
     "@vueuse/core": "^9.13.0",
+    "await-to-js": "^3.0.0",
     "eventsource-parser": "^1.1.1",
     "form-data": "^4.0.0",
     "gpt-tokenizer": "^2.1.2",
