--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "private": false,
   "description": "ruoyi-web",
-  "author": "ageerle@163.com",
+  "author": "ageer <ageerle@163.com>",
   "keywords": [
     "rouyi-web",
     "chatgpt",
@@ -26,12 +26,17 @@
     "lint:fix": "eslint . --fix",
     "bootstrap": "pnpm install && pnpm run common:prepare",
     "common:cleanup": "rimraf node_modules && rimraf pnpm-lock.yaml",
-    "common:prepare": "husky install"
+    "common:prepare": "husky install",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
     "@traptitech/markdown-it-katex": "^3.6.0",
+    "@vue-office/pdf": "^2.0.10",
     "@vueuse/core": "^9.13.0",
     "await-to-js": "^3.0.0",
+    "element-plus": "^2.9.2",
     "eventsource-parser": "^1.1.1",
     "form-data": "^4.0.0",
     "gpt-tokenizer": "^2.1.2",
@@ -44,6 +49,7 @@
     "naive-ui": "^2.34.3",
     "pinia": "^2.0.33",
     "vue": "^3.2.47",
+    "vue-demi": "^0.14.10",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
     "vue-waterfall-plugin-next": "^2.3.1"
@@ -78,6 +84,7 @@
     "vite": "^4.2.0",
     "vite-plugin-pwa": "^0.14.4",
     "vite-plugin-svg-icons": "^2.0.1",
+    "vitepress": "^1.6.3",
     "vue-tsc": "^1.2.0"
   },
   "lint-staged": {
