--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
+    "@tinyflow-ai/vue": "^0.0.9",
     "@traptitech/markdown-it-katex": "^3.6.0",
     "@vicons/ionicons5": "^0.13.0",
     "@vue-office/pdf": "^2.0.10",
