--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gpt-tokenizer": "^2.1.2",
     "highlight.js": "^11.7.0",
     "html2canvas": "^1.4.1",
+    "idb": "^8.0.3",
     "js-audio-recorder": "^1.0.7",
     "katex": "^0.16.4",
     "localforage": "^1.10.0",
